2003-10-14  John Levon  <levon@movementarian.org>

	* configure.in: xmemdup not xmemdump

2003-10-14  John Levon  <levon@movementarian.org>

	* daemon/opd_perfmon.c: propagate a SIGTERM
	up to the parent.

2003-10-14  John Levon  <levon@movementarian.org>

	* m4/perfmon.m4:
	* configure.in: remove pfmlib checks

	* daemon/opd_util.h:
	* daemon/opd_util.c:
	* daemon/opd_mangling.c:
	* daemon/oprofiled.c: parse more detailed events
	passed on command line

	* daemon/opd_perfmon.h:
	* daemon/opd_perfmon.c: don't use libpfm at all,
	do it ourselves.

	* utils/opcontrol: pass more of the events info to
	the daemon

2003-10-14  John Levon  <levon@movementarian.org>

	* m4/perfmon.m4:
	* configure.in: look for pfmlib 3

	* daemon/Makefile.am:
	* daemon/opd_perfmon.h:
	* daemon/opd_perfmon.c: interface to perfmon on 2.6 IA64

	* daemon/opd_mangling.c:
	* daemon/oprofiled.c: read event descriptions from command
	line not oprofilefs

	* daemon/opd_util.h:
	* daemon/opd_util.c: receive SIGUSR1/2 for perfmon

	* utils/opcontrol: handle multiple oprofileds. Send SIGUSR1/2
	on start/stop. Pass in events list to oprofiled on 2.6. Don't
	attempt to fill in oprofilefs with event info if using perfmon.

2003-10-14  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_mangling.c:
	* daemon/opd_sfile.c:
	* daemon/opd_sfile.h: protect the sfile we are acting on to be freed
	  by sfile_lru_clear()

	* libdb/db_manage.c:
	* libdb/odb_hash.h: Do not put hash->descr in an inconsistent state
	  when a failure occur.

2003-10-13  Philippe Elie  <phil.el@wanadoo.fr>

	* module/oprofile.c: don't restore syscall and stop counter twice

2003-10-13  Will Cohen  <wcohen@redhat.com>

	* libop/op_parse_event.c(parse_events): Correct fprintf.

2003-10-13  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/hammer_op_syscalls.c: pass tgid to daemon. Not tested!

2003-10-12  John Levon  <levon@movementarian.org>

	* utils/opcontrol: share --separate-cpu/thread code now
