@@ -55,16 +55,26 @@ static char const * get_dep_name(struct sfile const * sf)
 }
 
 
+static struct opd_event * find_event(unsigned long counter)
+{
+	size_t i;
+
+	for (i = 0; opd_events[i].name; ++i) {
+		if (counter == opd_events[i].counter)
+			return &opd_events[i];
+	}
+
+	fprintf(stderr, "Unknown event for counter %lu\n", counter);
+	abort();
+	return NULL;
+}
+
+
 static char * mangle_filename(struct sfile const * sf, int counter)
 {
 	char * mangled;
 	struct mangle_values values;
-
-	if (!opd_events[counter].name) {
-		fprintf(stderr, "Unknown event for counter %u\n",
-		        counter);
-		abort();
-	}
+	struct opd_event * event = find_event(counter);
 
 	values.flags = 0;
 	if (sf->kernel) {
@@ -93,9 +103,9 @@ static char * mangle_filename(struct sfile const * sf, int counter)
 		values.cpu = sf->cpu;
 	}
 
-	values.event_name = opd_events[counter].name;
-	values.count = opd_events[counter].count;
-	values.unit_mask = opd_events[counter].um;
+	values.event_name = event->name;
+	values.count = event->count;
+	values.unit_mask = event->um;
 
 	mangled = op_mangle_filename(&values);
 
@@ -108,6 +118,7 @@ int opd_open_sample_file(struct sfile * sf, int counter)
 	char * mangled;
 	samples_odb_t * file;
 	struct opd_header * header;
+	struct opd_event * event = find_event(counter);
 	char const * binary;
 	int err;
 
@@ -153,9 +164,9 @@ retry:
 	header->version = OPD_VERSION;
 	memcpy(header->magic, OPD_MAGIC, sizeof(header->magic));
 	header->is_kernel = !!sf->kernel;
-	header->ctr_event = opd_events[counter].value;
-	header->ctr_count = opd_events[counter].count;
-	header->ctr_um = opd_events[counter].um;
+	header->ctr_event = event->value;
+	header->ctr_count = event->count;
+	header->ctr_um = event->um;
 	header->ctr = counter;
 	header->cpu_type = cpu_type;
 	header->cpu_speed = cpu_speed;
